add base landing stub

--- a/.env.dist
+++ b/.env.dist
@@ -15,3 +15,4 @@ DATABASE_ALIAS=prototyper_database
 JWT_TOKEN_TTL=90
 HOST=prototyper.localhost
 LOCALHOST_PUBLIC_PORT=8081
+DATABASE_TABLES_PREFIX=smfn
