--- a/app/config/services.yaml
+++ b/app/config/services.yaml
@@ -4,13 +4,19 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+  table_prefix: '%env(DATABASE_TABLES_PREFIX)%_'
+  api_version: '%env(API_VERSION)%'
+  service_name: '%env(SERVICE_NAME)%'
 
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-
+        bind:
+          'string $projectDir': '%kernel.project_dir%'
+          'string $projectEnvironment': '%kernel.environment%'
+          
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
@@ -19,6 +25,16 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
-
-    # add more service definitions when explicit configuration is needed
+    
+    App\Event\Listener\TablePrefixListener:
+      arguments:
+        - '%table_prefix%'
+      tags:
+        - { name: doctrine.event_listener, event: loadClassMetadata, method: loadClassMetadata }
+    
+    Symfony\Component\Serializer\Normalizer\GetSetMethodNormalizer:
+      class: Symfony\Component\Serializer\Normalizer\GetSetMethodNormalizer
+      tags: [ serializer.normalizer ]
+  
+  # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
