--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -5,3 +5,28 @@ services:
   web:
     ports:
       - "${LOCALHOST_PUBLIC_PORT}:80"
+  mailer:
+    container_name: ${PROJECT_NAME:-solo}-${SERVICE_NAME:-service}-mailer-${API_VERSION:-1.0}-${APP_ENV:-none}
+    image: axllent/mailpit
+    restart: unless-stopped
+    environment:
+      MP_SMTP_AUTH_ACCEPT_ANY: 1
+      MP_SMTP_AUTH_ALLOW_INSECURE: 1
+    networks:
+      - proxy_network
+      - default
+    labels:
+      - "traefik.enable=true"
+      
+      - "traefik.tcp.routers.mailer-${PROJECT_NAME}-${SERVICE_NAME}-tcp.rule=HostSNI(`mailer.${HOST}`)"
+      - "traefik.tcp.routers.mailer-${PROJECT_NAME}-${SERVICE_NAME}-tcp.tls=true"
+      - "traefik.tcp.routers.mailer-${PROJECT_NAME}-${SERVICE_NAME}-tcp.entrypoints=smtp"
+      - "traefik.tcp.routers.mailer-${PROJECT_NAME}-${SERVICE_NAME}-tcp.service=mailer_smtp"
+      - "traefik.tcp.services.mailer_smtp.loadbalancer.server.port=1025"
+
+      - "traefik.http.routers.mailer-${PROJECT_NAME}-${SERVICE_NAME}-http.rule=Host(`mailer.${HOST}`)"
+      - "traefik.http.routers.mailer-${PROJECT_NAME}-${SERVICE_NAME}-http.entrypoints=web"
+      - "traefik.http.routers.mailer-${PROJECT_NAME}-${SERVICE_NAME}-http.service=mailer_web"
+      - "traefik.http.services.mailer_web.loadbalancer.server.port=8025"
+    volumes:
+      - ./tmp/mailer/data:/data
