add register and logic basics

--- a/.env.dist
+++ b/.env.dist
@@ -16,3 +16,5 @@ JWT_TOKEN_TTL=90
 HOST=prototyper.localhost
 LOCALHOST_PUBLIC_PORT=8081
 DATABASE_TABLES_PREFIX=smfn
+
+MAILER_DSN=smtp://mailer:1025
