--- a/app/composer.json
+++ b/app/composer.json
@@ -26,6 +26,7 @@
         "symfony/form": "7.0.*",
         "symfony/framework-bundle": "7.0.*",
         "symfony/http-client": "7.0.*",
+        "symfony/mailer": "7.0.*",
         "symfony/mime": "7.0.*",
         "symfony/monolog-bundle": "3.10.*",
         "symfony/property-access": "7.0.*",
@@ -37,6 +38,7 @@
         "symfony/uid": "7.0.*",
         "symfony/validator": "7.0.*",
         "symfony/yaml": "7.0.*",
+        "symfonycasts/verify-email-bundle": "*",
         "twig/extra-bundle": "3.10.*",
         "twig/twig": "3.10.*"
     },
