--- a/app/composer.json
+++ b/app/composer.json
@@ -38,7 +38,7 @@
         "symfony/uid": "7.0.*",
         "symfony/validator": "7.0.*",
         "symfony/yaml": "7.0.*",
-        "symfonycasts/verify-email-bundle": "*",
+        "symfonycasts/verify-email-bundle": "1.17.*",
         "twig/extra-bundle": "3.10.*",
         "twig/twig": "3.10.*"
     },
