--- a/app/config/packages/security.yaml
+++ b/app/config/packages/security.yaml
@@ -3,18 +3,9 @@ security:
       Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'bcrypt'
     
     providers:
-      email_provider:
+      users:
         entity:
           class: App\Entity\User
-          property: email
-      username_provider:
-        entity:
-          class: App\Entity\User
-          property: username
-      id_provider:
-        entity:
-          class: App\Entity\User
-          property: id
     
     role_hierarchy:
       ROLE_USER: [IS_AUTHENTICATED_FULLY]
@@ -31,9 +22,9 @@ security:
             security: false
         main:
             lazy: true
-            provider: email_provider
+            provider: users
             user_checker: App\Security\UserChecker
-            custom_authenticator: App\Security\AppAuthenticator
+            custom_authenticator: App\Security\AppFormLoginAuthenticator
             logout:
                 path: security_logout
                 # where to redirect after logout
@@ -56,18 +47,18 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
-
-when@test:
-    security:
-        password_hashers:
-            # By default, password hashers are resource intensive and take time. This is
-            # important to generate secure password hashes. In tests however, secure hashes
-            # are not important, waste resources and increase test times. The following
-            # reduces the work factor to the lowest possible values.
-            Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
-                algorithm: auto
-                cost: 4 # Lowest possible value for bcrypt
-                time_cost: 3 # Lowest possible value for argon
-                memory_cost: 10 # Lowest possible value for argon
+         - { path: ^/admin, roles: ROLE_ADMIN }
+         - { path: ^/profile, roles: ROLE_USER }
+#
+#when@test:
+#    security:
+#        password_hashers:
+#            # By default, password hashers are resource intensive and take time. This is
+#            # important to generate secure password hashes. In tests however, secure hashes
+#            # are not important, waste resources and increase test times. The following
+#            # reduces the work factor to the lowest possible values.
+#            Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
+#                algorithm: auto
+#                cost: 4 # Lowest possible value for bcrypt
+#                time_cost: 3 # Lowest possible value for argon
+#                memory_cost: 10 # Lowest possible value for argon
