--- a/app/composer.json
+++ b/app/composer.json
@@ -40,7 +40,7 @@
         "symfony/yaml": "7.0.*",
         "symfonycasts/verify-email-bundle": "1.17.*",
         "twig/extra-bundle": "3.10.*",
-        "twig/twig": "3.10.*"
+        "twig/twig": "3.10.*",
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "3.5.*",
