--- a/app/config/services.yaml
+++ b/app/config/services.yaml
@@ -9,6 +9,7 @@ parameters:
   service_name: '%env(SERVICE_NAME)%'
   content_dir: '%kernel.project_dir%/public/assets/content'
   env: '%kernel.environment%'
+  openai_api_secret_key: '%env(OPENAI_API_SECRET_KEY)%'
 
 services:
     # default configuration for services in *this* file
