update project form. add prompt meta editing.

--- a/app/config/packages/doctrine.yaml
+++ b/app/config/packages/doctrine.yaml
@@ -8,6 +8,10 @@ doctrine:
 
         profiling_collect_backtrace: '%kernel.debug%'
         use_savepoints: true
+        mapping_types:
+          enum: string
+        types:
+          json_dto: \App\Entity\Type\JsonDataTransferObjectType
     orm:
         auto_generate_proxy_classes: true
         enable_lazy_ghost_objects: true
