add variant builder image generation via AI/ML api.

--- a/.env.dist
+++ b/.env.dist
@@ -18,3 +18,6 @@ LOCALHOST_PUBLIC_PORT=8081
 DATABASE_TABLES_PREFIX=smfn
 
 MAILER_DSN=smtp://mailer:1025
+
+OPENAI_API_SECRET_KEY=
+AIML_API_SECRET_KEY=
